--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "mini-toastr": "^0.3.10",
     "vue": "^2.0.1",
     "vue-i18n": "^4.7.1",
+    "vue-multiselect": "^2.0.0-beta.10",
+    "vue-notifications": "^0.7.0",
     "vue-resource": "^1.0.3"
   },
   "devDependencies": {
